<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="simple_calculator">SImple Calculator</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_time_in_year">Enter Time (in Year)</string>
    <string name="enter_interest_rate_in">Enter Interest Rate (In %)</string>
    <string name="principal_amount">Principal Amount</string>
    <string name="simple_interest">Simple Interest</string>
    <string name="compound_interest">Compound Interest</string>
    <string name="Interest_calculator">Interest_Calculator</string>
    <string name="time">Time</string>
    <string name="simple_interest">Simple Interest</string>
    <string name="compound_interest">Compound Interest</string>
    <string name="calculate">Calculate</string>
</resources>