<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Interest_calculator"
        android:textAlignment="center"
        android:textSize="30sp"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_full_name"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/principal_amount"
        android:id="@+id/amt"
        android:textAlignment="center"
        android:inputType="number"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_interest_rate_in"
        android:id="@+id/interest"
        android:textAlignment="center"
        android:inputType="number"
        android:gravity="center_horizontal" />


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:layout_height="20dp"
        android:layout_gravity="center"/>

    <RadioGroup
        android:id="@+id/interestTypeRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp">

        <RadioButton
            android:id="@+id/simpleInterestRadio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/simple_interest"
            android:layout_weight="1"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/compoundInterestRadio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/compound_interest"
            android:layout_weight="1"
            />
    </RadioGroup>

    <Button
        android:id="@+id/calculateAction"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/Output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

</LinearLayout>